Updated Site Content

--- a/index.html
+++ b/index.html
@@ -458,6 +458,15 @@
   <div class="carousel" id="carousel">
     <div class="carousel-track" id="carouselTrack">
 
+      <div class="project-card" data-url="https://github.com/ethanmartin223/ethanmartin223.github.io">
+        <img src="img/projectImages/website.png" alt="Project 1">
+        <div class="project-overlay">
+          <h3>This Website</h3>
+          <p>I designed this website using HTML/CSS/JS</p>
+          <span>2023 - Present</span>
+        </div>
+      </div>
+
       <div class="project-card" data-url="https://github.com/ethanmartin223/FractalRenderer">
         <img src="img/projectImages/mandlebrot.png" alt="Project 1">
         <div class="project-overlay">
@@ -500,6 +509,15 @@
           <h3>Reaction Optimizer</h3>
           <p>Project for a Chemistry Class on Optimization</p>
           <span>2022</span>
+        </div>
+      </div>
+
+      <div class="project-card" data-url="https://github.com/ethanmartin223/PropositionCalculator">
+        <img src="img/projectImages/PropCalc.png" alt="Project 3">
+        <div class="project-overlay">
+          <h3>Proposition Calculator</h3>
+          <p>Project for a Discrete Mathematics Class</p>
+          <span>2024</span>
         </div>
       </div>
 
